fixed problem with tests